# HarnessForge

./: .gitignore  Cargo.toml  Dockerfile  README.md  mkdocs.yml
.github/actions/forge-check/: action.yml
.github/workflows/: ci.yml  publish-pypi.yml
deploy/k8s/helm/: Chart.yaml  values.yaml
deploy/k8s/operator/: forge-crd.yaml
docs/: cli.md  dashboard.md  index.md
docs/concepts/: architecture.md  self-improvement.md
docs/getting-started/: installation.md  quickstart.md
examples/basic-agent/: Cargo.toml
examples/basic-agent/src/: main.rs
