[workspace]
resolver = "2"
members = [
    "packages/forge-sdk",
    "packages/forge-harness",
    "packages/forge-observers",
    "packages/forge-detectors",
    "packages/forge-strategies",
    "packages/forge-audit",
    "packages/forge-mcp",
    "packages/forge-skills",
    "packages/forge-cloud",
    "packages/forge-cli",
    "packages/forge-bridge",
    "packages/forge-meta",
    "packages/forge-server",
    "packages/forge-integrations",
    "packages/forge-py",
    "examples/basic-agent",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/forgelabs/forge"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "json", "chrono", "uuid"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
leptos = "0.7"
toml = "0.8"
pyo3 = "0.23"
